syntax = "proto3";

package pb_storage;

import "data_storage.proto";

option go_package = "server-test/server-storage/pb_storage";
// option go_package = "server-test/pb";

message DataInfoTestResquest{
    string dataTest = 1;
}

message DataInfoTestRespone{
    string  dataResp = 1;
}

message FileInfoResquest{
    FileInfo file = 1;
    string iduser = 2;
}

message FileInfoRespone{
    string  link = 1;
}


message GetListFileUploadResquest{
    string iduser = 1;
}

message GetListFileUploadRespone{
    repeated FileInfo fileinfo = 1;
}


message ExportFileResquest{
    string templateExport = 1;
}

message ExportFileRespone{
    string pathExport = 1;
}

message DownloadFileResquest{
    string dir = 1;
}

message DownloadFileRespone{
    string name = 1;
    bytes content = 2;
}

